Made a main-blank block in base.html to fix overflow in formum

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -35,20 +35,15 @@ html, body {
     min-height: 100vh;
     flex-direction: column;
 }
-
-#mainContent {
-    padding: 20px 20px 20px 20px;
-    background-color: var(--white);
-    border-left-style: solid;
-    border-left-width: thin;
-    border-left-color: lightgray;
-    border-right-style: solid;
-    border-right-width: thin;
-    border-right-color: lightgray;
+#full-body {
     flex: 1;
     overflow: hidden;
 }
 
+#mainContent {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
 
 .logo {
 padding: 7px;
