--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -1,8 +1,3 @@
-#mainContent{
-    background-color: var(--nabla-background);
-    border: 0;
-}
-
 .maingrid-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
